# CTextFileToMemory

./: CMakeLists.txt  README.md  cTextFileToMemory.h  test.c  testList.txt
